bunch of code uploaded

--- a/CSI518_team5/WebContent/WEB-INF/web.xml
+++ b/CSI518_team5/WebContent/WEB-INF/web.xml
@@ -9,6 +9,14 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+   <context-param>
+    <param-name>host</param-name>
+    <param-value>smtp.gmail.com</param-value>
+  </context-param>
+  <context-param>
+    <param-name>port</param-name>
+    <param-value>587</param-value>
+  </context-param>
   <context-param>
     <param-name>user</param-name>
     <param-value>icsi518.team5</param-value>
